<resources>
    <string name="app_name">Proyecto_PMMD</string>
    <string name="text_started_title">BIENVENIDO.</string>
    <!--Description-->
    <string name="description_img">imagen login</string>
    <string name="descripcion_add">descripcion boton</string>
    <string name="descripcion_img">descripcion imagen</string>
    <string name="descripcion_edit">descripcion boton</string>
    <string name="descripcion_delete">descripcion boton</string>
    <!--Login fragment-->
    <string name="text_login_title">Iniciar Sesion.</string>
    <string name="edit_text_username_login">Introduce tu email o usuario</string>
    <string name="edit_text_password_login">Introduce tu contraseña</string>
    <string name="text_btn_login">Login</string>
    <!--Register fragment-->
    <string name="text_register_title">Crear una cuenta nueva</string>
    <string name="text_btn_register">REGISTRARSE</string>
    <string name="edit_text_fullname_register">Introduce tu nombre completo</string>
    <string name="edit_text_email_register">Introduce tu email</string>
    <string name="edit_text_username_register">Introduce tu usuario</string>
    <string name="edit_text_password_register">Introduce tu contraseña</string>
    <string name="edit_text_confirm_password_register">Confirma tu contraseña</string>
    <!--Recycler View Digimon-->
    <string name="text_title_dialog">Editar/Nuevo Digimon</string>
    <string name="id_text_dialog_level">Introduce el Rango del Digimon</string>
    <string name="id_text_dialog_type">Introduce el Tipo del Digimon</string>
    <string name="id_text_dialog_attribute">Introduce el Atributo del Digimon</string>
    <string name="txt_name">Nombre Digimon</string>
    <string name="txt_Level">Level</string>
    <string name="txt_Type">Type</string>
    <string name="txt_Attribute">Attribute</string>
    <string name="id_text_dialog_name">Introduce el Nombre del Digimon</string>
    <!-- Tool Bar Menu -->
    <string name="text_home">BIENVENIDO A DIGIMON</string>
    <string name="item_title_home">Home</string>
    <string name="item_title_digimon">Digimon</string>
    <!-- Digimon Details -->
    <string name="text_title_details">Acerca de los Digimons</string>
    <string name="descripcion_btn">son botones</string>
    <string name="text_name_data1">DIGITAL MONSTERS</string>
    <string name="text_name_data2">EVOLUTION</string>
    <string name="text_name_data3">DIGITAL WORLD</string>
    <string name="text_name_data4">X-EVOLUTION MONSTERS</string>
    <string name="text_home_eleccion">Pulsa para acceder a los detalles</string>
    <string name="text_btn_toDetails">Go to details</string>
    <string name="text_spinnerString_details">"El digimon se llama: "</string>
    <string name="text_description_data1">Un día, un virus artificialmente inteligente comenzó a propagarse entre los ordenadores del mundo.\nCambió su forma a medida que viajaba por la red, y evolucionó hasta convertirse en las formas de vida conocidas como Monstruos Digitales o Digimon.</string>
    <string name="text_description_data2">Los Digimon nacen de los Digi-Huevos.\nLos Digimon crecen cuando consumen programas y datos, o cuando triunfan en la batalla, ¡lo que les permite Digivolucionar!\nAl final mueren de viejos y vuelven a ser Digi-Huevos.</string>
    <string name="text_description_data3">Los Digimon viven en un mundo conocido como el Mundo Digital.\nEl Mundo Digital es un mundo de realidad virtual construido en la red.\nEn muchos aspectos es muy similar al mundo real, con atmósfera, vastos océanos y formas terrestres como continentes e islas.</string>
    <string name="text_description_data4">Para escapar de la amenaza del Programa X, algunos Digimon introducen el Anticuerpo-X en su DigiCore, obteniendo una Digivolución única conocida como Evolución-X y convirtiéndose en \"Digimon Anticuerpo-X\".\nEn la actualidad, se han confirmado más de 90 Digimon X-Anticuerpo.</string>

</resources>