<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".fragments.Data1Fragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/text_name_data1"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="150dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/text_description_data1"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="bottom|center"
        android:layout_margin="20dp"
        android:contentDescription="@string/description_img"
        android:src="@drawable/digimonmonster" />
</FrameLayout>